# coursework_project_2

./: .gitignore  README.md  pyproject.toml
htmlcov/: index.html
src/: api.py  file_connector.py  filter_vacancies.py  user_interface.py  utils.py  vacancy.py
tests/: test_vacancy.py
