[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "coursework-project-2"
version = "0.1.0"
description = "Курсовая работа по интеграции с API hh.ru"
authors = ["Your Name <you@example.com>"]

# Ключевая строка: указываем, что src — это пакет
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
main = "src.user_interface:user_interaction"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E266, E501, W503"